--- a/src/index.css
+++ b/src/index.css
@@ -521,7 +521,7 @@ canvas {
 .product-img img {
   width: 100%;
   height: 250px;
-  object-fit: cover;
+  /* object-fit: cover; */
   transition: transform 0.5s ease;
 }
 
